bug squashing

--- a/styles/MessageArea.module.scss
+++ b/styles/MessageArea.module.scss
@@ -11,6 +11,7 @@
 
 .messages {
   grid-area: messages;
+  overflow: scroll;
 }
 
 .textbox {
