--- a/styles/repeated/Message.module.scss
+++ b/styles/repeated/Message.module.scss
@@ -1,6 +1,8 @@
 .msgroot {
-  display: flex;
+  display: grid;
   align-items: center;
+  grid-template-areas: "a b";
+  grid-template-columns: 32px 1fr;
   gap: 7px;
   padding: 5px;
 }
